 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 2
============

* [cdunde]: Model Editor - Fixed model importers to display proper skin once a model is imported.

* [cdunde]: Model Editor - Fixed face mode not drawing selection outlines while rotating.

* [cdunde/DanielPharos]: Added setup file for Doom3 Quake4 .md5mesh and .md5anim model importing.

* [cdunde]: Setup new Component Colors and draw Textured View Tint Colors system.

* [cdunde/DanielPharos]: DEV. NOTE: Bones system moved to outside of components for Model Editor completed.
          - all files for source code, runtime and InfoBase updated Nov. 18, 2008.

* [cdunde/DanielPharos]: DEV. NOTE: Bones system inside components for Model Editor and InfoBase update completed :
          - for source code files Oct. 11, 2008, runtime files Nov. 3, 2008, InfoBase files Oct. 23, 2008.

* [cdunde]: A new addon file for Quake Rally, created by X7.

* [DanielPharos]: Added partial support for loading Call of Duty 2 maps.

* [cdunde]: Did a whole write up on "Bones" and updated "How to Write Model Importers & Exporters"
          - to add them for QuArK in the "Model-editor in QuArK" section of the InfoBase Docs.

* [DanielPharos]: Massive update to get Steam finally working better. Now just
          - changing one setting will allow you to switch to ANY different Steam/HL2
          - game!

* [DanielPharos]: Major improvements to HWnd and HDC handling. This should fix all
          - kinds of OpenGL problems.

* [DanielPharos]: Changes to Help system: All forms now have a customizable help-link.
          - Also, added a fallback to the online infobase docs option.
