@@ -15,6 +15,8 @@ $Id$
 6.6.0 Beta 2
 ============
 
+* [DanielPharos]: Fixed AutoSave-setting not being applied.
+
 * [cdunde]: Model Editor - Fixed model importers to display proper skin once a model is imported.
 
 * [cdunde]: Model Editor - Fixed face mode not drawing selection outlines while rotating.
